--- a/.asyncapi-tool.yaml
+++ b/.asyncapi-tool.yaml
@@ -1,13 +1,9 @@
 title: AsyncAPI Studio
-description: Visually design your AsyncAPI files and event-driven architecture.
 links:
   websiteUrl: https://studio.asyncapi.com
 filters:
-  language: JavaScript
   technology:
-    - React
+    - React JS
     - TypeScript
   categories:
     - editor
-    - platform
-    - ui
