--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@asyncapi/react-component": "^1.0.0-next.44",
     "@asyncapi/specs": "^4.0.1",
     "@ebay/nice-modal-react": "^1.2.8",
+    "@einheit/path-resolve": "^1.2.0",
     "@headlessui/react": "^1.7.4",
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
