fix: comment mentioning the tutorial (#536)
Co-authored-by: Maciej Urbańczyk <urbanczyk.maciej.95@gmail.com>

--- a/src/examples/tutorials/invalid.yml
+++ b/src/examples/tutorials/invalid.yml
@@ -1,3 +1,5 @@
+# This invalid file exists solely for educational purposes, and if you come across it, here is the tutorial: https://www.asyncapi.com/docs/tutorials/validate-documents
+
 asyncapi: '1.0.0'
 info:
   title: Streetlights API
