Removing unnecessary files

--- a/apps/design-system/.gitignore
+++ b/apps/design-system/.gitignore
@@ -3,6 +3,7 @@ build
 npm-debug.log
 .env
 .DS_Store# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.turbo
 
 # dependencies
 /node_modules
