change publish dir

--- a/apps/studio/netlify.toml
+++ b/apps/studio/netlify.toml
@@ -2,4 +2,4 @@
   base = "apps/studio/"
   command = "npm run build"
   functions = "netlify/functions"
-  publish = "build"
+  publish = "apps/studio/"
