--- a/apps/studio/netlify.toml
+++ b/apps/studio/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = "npm run build"
   functions = "netlify/functions"
-  publish = "apps/studio/"
+  publish = "apps/studio/build/"
