change build command netlify

--- a/apps/studio/netlify.toml
+++ b/apps/studio/netlify.toml
@@ -1,5 +1,4 @@
 [build]
-  base = "apps/studio/build/"
-  command = "npm run build"
+  command = "cd apps/studio && npm run build"
   functions = "netlify/functions"
   publish = "apps/studio/build/"
