--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -20,7 +20,7 @@
     "generate:assets": "echo \"No assets to configure\"",
     "test": "echo \"No tests\"",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006 --no-open",
+    "dev": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
   "eslintConfig": {
