--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@asyncapi/studio",
+  "name": "@khudadad414/studio",
   "version": "0.18.1",
   "description": "One place that allows you to develop an AsyncAPI document, validate it, convert it to the latest version, preview the documentation and visualize the events flow.",
   "license": "Apache-2.0",
@@ -63,7 +63,7 @@
     "generate:template-parameters": "ts-node ./scripts/template-parameters.ts",
     "generate:docker": "docker build --tag asyncapi/studio .",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
-    "release": "npm run generate:docker && semantic-release",
+    "release": "npm run generate:docker && semantic-release -e semantic-release-monorepo",
     "prepublishOnly": "npm run build && npm run generate:readme:toc"
   },
   "browserslist": {
@@ -124,7 +124,6 @@
     "process": "^0.11.10",
     "raw-loader": "^4.0.2",
     "react-scripts": "5.0.1",
-    "semantic-release": "^19.0.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.2.4",
