--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,16 @@
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "outputs": ["build", "storybook-static"]
     },
     "dev": {
       "dependsOn": ["^dev"],
       "cache": false,
       "persistent": true
+    },
+    "release": {
+      "dependsOn": ["build"]
     }
   }
 }
