Adding UI package

--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studio-ui",
+  "name": "design-system",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.0",
+    "ui": "*",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
