--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,10 @@
     },
     "release": {
       "dependsOn": ["build"]
+    },
+    "test": {},
+    "bump:version": {
+      "cache": false
     }
   }
 }
