Move components the UI package

--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -21,7 +21,7 @@
     "generate:assets": "echo \"No assets to configure\"",
     "test": "echo \"No tests\"",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006 --no-open",
+    "dev": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
   "eslintConfig": {
@@ -46,30 +46,27 @@
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
-    "@storybook/addon-actions": "^7.0.18",
-    "@storybook/addon-docs": "^7.0.18",
-    "@storybook/addon-essentials": "^7.0.18",
-    "@storybook/addon-interactions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/addon-mdx-gfm": "^7.0.18",
+    "@storybook/addon-actions": "^7.0.20",
+    "@storybook/addon-docs": "^7.0.20",
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-interactions": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/addon-mdx-gfm": "^7.0.20",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-styling": "^1.0.8",
-    "@storybook/addons": "^7.0.18",
-    "@storybook/preset-create-react-app": "^7.0.18",
+    "@storybook/addon-styling": "^1.1.0",
+    "@storybook/addons": "^7.0.20",
+    "@storybook/preset-create-react-app": "^7.0.20",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^7.0.18",
-    "@storybook/react-webpack5": "^7.0.18",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-webpack5": "^7.0.20",
     "@storybook/testing-library": "^0.1.0",
-    "@storybook/theming": "^7.0.18",
+    "@storybook/theming": "^7.0.20",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "postcss": "^8.4.24",
-    "postcss-import": "^14.0.2",
     "react-docgen-typescript-plugin": "^1.0.5",
     "remark-gfm": "^3.0.1",
-    "storybook": "^7.0.18",
-    "tailwindcss": "^3.2.7",
+    "storybook": "^7.0.20",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.2",
     "webpack": "^5.69.0"
