--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "build": "turbo run build",
     "dev": "turbo run dev",
-    "ds": "turbo run dev --filter=...design-system"
+    "ds": "turbo run dev --filter=design-system...",
+    "studio": "turbo run dev --filter=design-system...",
+    "build": "turbo run build",
+    "build:studio": "turbo run build --filter=studio...",
+    "build:ds": "turbo run build --filter=design-system..."
   },
   "devDependencies": {
     "turbo": "^1.10.2"
