--- a/.github/workflows/if-nodejs-version-bump.yml
+++ b/.github/workflows/if-nodejs-version-bump.yml
@@ -4,9 +4,9 @@
 # It does magic only if there is package.json file in the root of the project
 name: Version bump - if Node.js project
 
-on: 
+on:
   release:
-    types: 
+    types:
       - published
 
 jobs:
@@ -34,7 +34,10 @@ jobs:
       - if: steps.packagejson.outputs.exists == 'true'
         name: Install dependencies
         run: npm install
-      - if: steps.packagejson.outputs.exists == 'true'  
+      - if: steps.packagejson.outputs.exists == 'true'
+        name: Assets generation
+        run: npm run generate:assets --if-present
+      - if: steps.packagejson.outputs.exists == 'true'
         name: Bump version in package.json
         # There is no need to substract "v" from the tag as version script handles it
         # When adding "bump:version" script in package.json, make sure no tags are added by default (--no-git-tag-version) as they are already added by release workflow
@@ -46,8 +49,8 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
           commit-message: 'chore(release): ${{github.event.release.tag_name}}'
-          committer: KhudaDad414
-          author: KhudaDad414
+          committer: asyncapi-bot <info@asyncapi.io>
+          author: asyncapi-bot <info@asyncapi.io>
           title: 'chore(release): ${{github.event.release.tag_name}}'
           body: 'Version bump in package.json for release [${{github.event.release.tag_name}}](${{github.event.release.html_url}})'
           branch: version-bump/${{github.event.release.tag_name}}
