--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@khudadad414/studio-ui",
+  "name": "@asyncapi/studio-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
