--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "bump:version": "../../bump-version.sh ui",
+    "release": "semantic-release -e semantic-release-monorepo",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
@@ -29,5 +31,28 @@
     "tsconfig": "*",
     "tsup": "^6.1.3",
     "typescript": "^4.9.4"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits"
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "conventionalcommits"
+        }
+      ],
+      "@semantic-release/github"
+    ]
   }
 }
