--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,8 +7,10 @@
   ],
   "exports": {
     ".": "./dist",
+    "./icons": "./dist/icons",
     "./styles.css": "./dist/index.css"
   },
+  "module": "es2022",
   "license": "MIT",
   "scripts": {
     "build": "tsup",
@@ -19,6 +21,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@svgr/core": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
