--- a/apps/design-system/netlify.toml
+++ b/apps/design-system/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run build-storybook"
+  command = "npm run build"
   functions = "netlify/functions"
   publish = "storybook-static"
