--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -12,7 +12,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-scripts": "5.0.0",
     "ui": "*",
     "web-vitals": "^2.1.4"
   },
@@ -49,7 +48,6 @@
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
     "@storybook/addon-actions": "^7.0.20",
-    "@storybook/addon-docs": "^7.0.20",
     "@storybook/addon-essentials": "^7.0.20",
     "@storybook/addon-interactions": "^7.0.20",
     "@storybook/addon-links": "^7.0.20",
@@ -57,12 +55,13 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-styling": "^1.1.0",
     "@storybook/addons": "^7.0.20",
+    "@storybook/blocks": "^7.0.22",
     "@storybook/preset-create-react-app": "^7.0.20",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^7.0.20",
     "@storybook/react-webpack5": "^7.0.20",
     "@storybook/testing-library": "^0.1.0",
-    "@storybook/theming": "^7.0.20",
+    "@storybook/theming": "^7.0.22",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
