--- a/.github/workflows/if-nodejs-release.yml
+++ b/.github/workflows/if-nodejs-release.yml
@@ -52,7 +52,7 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
       - if: steps.packagejson.outputs.exists == 'true'
         name: Install dependencies
-        run: npm install
+        run: npm install --workspaces
       - if: steps.packagejson.outputs.exists == 'true'
         name: Run test
         run: npm test --if-present
