--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -79,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@asyncapi/dotnet-nats-template": "^0.11.0",
     "@asyncapi/go-watermill-template": "^0.2.34",
     "@asyncapi/html-template": "^0.28.3",
