--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -26,11 +26,11 @@
     "./LICENSE"
   ],
   "dependencies": {
-    "@asyncapi/avro-schema-parser": "^3.0.1",
+    "@asyncapi/avro-schema-parser": "^3.0.2",
     "@asyncapi/converter": "^1.2.0",
-    "@asyncapi/openapi-schema-parser": "^3.0.1",
-    "@asyncapi/parser": "^2.0.0-next-major.14",
-    "@asyncapi/react-component": "^1.0.0-next.47",
+    "@asyncapi/openapi-schema-parser": "^3.0.3",
+    "@asyncapi/parser": "^2.0.3",
+    "@asyncapi/react-component": "^1.0.0-next.48",
     "@asyncapi/specs": "^4.2.1",
     "@ebay/nice-modal-react": "^1.2.10",
     "@headlessui/react": "^1.7.4",
