--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "turbo run dev",
-    "ds": "turbo run dev --filter=design-system...",
+    "ds": "turbo run dev --no-cache --continue --filter=design-system...",
     "studio": "turbo run dev --filter=design-system...",
     "build": "turbo run build",
     "release": "turbo run release",
