--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", "storybook-static/**"]
+      "outputs": ["dist/**", "storybook-static/**"],
+      "cache": false
     },
     "dev": {
       "cache": false,
