--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-toolbar": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
