fix: update dockerfile

--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -6,10 +6,6 @@
   "bugs": {
     "url": "https://github.com/asyncapi/studio/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/asyncapi/studio.git"
-  },
   "keywords": [
     "asyncapi",
     "documentation",
@@ -61,7 +57,7 @@
     "generate:readme:toc": "markdown-toc -i README.md",
     "generate:assets": "npm run build && npm run generate:readme:toc",
     "generate:template-parameters": "ts-node ./scripts/template-parameters.ts",
-    "generate:docker": "docker build --tag asyncapi/studio .",
+    "generate:docker": "docker build -f Dockerfile --tag asyncapi/studio ../../",
     "bump:version": "../../bump-version.sh @asyncapi/studio",
     "release": "npm run generate:docker && semantic-release -e semantic-release-monorepo",
     "prepublishOnly": "npm run build && npm run generate:readme:toc"
