--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,6 +34,7 @@
     "tailwind-config": "*",
     "tsconfig": "*",
     "tsup": "^6.1.3",
+    "esbuild": "^0.18.6",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
