feat: initialise next app

--- a/apps/studio/.eslintrc
+++ b/apps/studio/.eslintrc
@@ -13,6 +13,7 @@ plugins:
 
 extends:
   - eslint:recommended
+  - next/core-web-vitals
   - plugin:@typescript-eslint/eslint-recommended
   - plugin:@typescript-eslint/recommended
   - plugin:sonarjs/recommended
