--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -37,7 +37,10 @@
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
     "monaco-editor": "0.34.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "monaco-yaml": "4.0.2",
+    "next": "^13.4.7",
+    "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "2.4.0",
@@ -46,12 +49,9 @@
     "zustand": "^4.1.4"
   },
   "scripts": {
-    "dev": "npm run start",
-    "start": "craco start",
-    "build": "npm run generate:template-parameters && craco build",
-    "test": "npm run test:unit",
-    "test:unit": "craco test --watchAll=false --detectOpenHandles",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
     "lint": "eslint --max-warnings 0 --config .eslintrc .",
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "generate:readme:toc": "markdown-toc -i README.md",
@@ -86,7 +86,6 @@
     "@asyncapi/nodejs-ws-template": "^0.9.33",
     "@asyncapi/python-paho-template": "^0.2.13",
     "@asyncapi/ts-nats-template": "^0.10.2",
-    "@craco/craco": "^7.1.0",
     "@tailwindcss/typography": "^0.5.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -104,6 +103,7 @@
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.27.0",
+    "eslint-config-next": "^13.4.7",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-sonarjs": "^0.16.0",
@@ -114,7 +114,6 @@
     "postcss": "^8.4.19",
     "process": "^0.11.10",
     "raw-loader": "^4.0.2",
-    "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.2.4",
