--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -33,6 +33,7 @@
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
     "@tippyjs/react": "^4.2.6",
+    "css-loader": "^6.8.1",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
@@ -41,11 +42,15 @@
     "monaco-yaml": "4.0.2",
     "next": "^13.4.7",
     "next-transpile-modules": "^10.0.0",
+    "next-yaml": "^1.0.1",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "2.4.0",
     "react-icons": "^4.6.0",
+    "react-monaco-editor": "^0.52.0",
     "reactflow": "^11.2.0",
+    "style-loader": "^3.3.3",
     "zustand": "^4.1.4"
   },
   "scripts": {
@@ -102,6 +107,7 @@
     "buffer": "^6.0.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cross-env": "^7.0.3",
+    "encoding": "^0.1.13",
     "eslint": "^8.27.0",
     "eslint-config-next": "^13.4.7",
     "eslint-plugin-react": "7.31.10",
