chore: change distDir to maintain compatibility

--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -35,7 +35,8 @@
   },
   "include": [
     "src",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "build/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
