--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -18,12 +18,10 @@
   "scripts": {
     "lint": "echo \"No linter configured yet\"",
     "generate:assets": "echo \"No assets to configure\"",
-    "bump:version": "../../bump-version.sh design-system",
     "test": "echo \"No tests\"",
     "eject": "react-scripts eject",
     "dev": "storybook dev -p 6006 --no-open",
-    "build": "storybook build",
-    "release": "semantic-release -e semantic-release-monorepo"
+    "build": "storybook build"
   },
   "eslintConfig": {
     "extends": [
@@ -74,25 +72,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "release": {
-    "branches": [
-      "master"
-    ],
-    "plugins": [
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "preset": "conventionalcommits"
-        }
-      ],
-      [
-        "@semantic-release/release-notes-generator",
-        {
-          "preset": "conventionalcommits"
-        }
-      ],
-      "@semantic-release/github"
-    ]
   }
 }
