--- a/.github/workflows/if-nodejs-release.yml
+++ b/.github/workflows/if-nodejs-release.yml
@@ -8,63 +8,11 @@ on:
   push:
     branches:
       - master
-      # below lines are not enough to have release supported for these branches
-      # make sure configuration of `semantic-release` package mentions these branches
-      - next-spec
-      - next-major
-      - next-major-spec
-      - beta
-      - alpha
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  test-nodejs:
-    # We just check the message of first commit as there is always just one commit because we squash into one before merging
-    # "commits" contains array of objects where one of the properties is commit "message"
-    # Release workflow will be skipped if release conventional commits are not used
-    if: |
-    name: Test NodeJS release on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    steps:
-      - name: Set git to use LF #to once and for all finish neverending fight between Unix and Windows
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Check if Node.js project and has package.json
-        id: packagejson
-        run: test -e ./package.json && echo "exists=true" >> $GITHUB_OUTPUT || echo "exists=false" >> $GITHUB_OUTPUT
-        shell: bash
-      - if: steps.packagejson.outputs.exists == 'true'
-        name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-      - if: steps.packagejson.outputs.exists == 'true'
-        name: Install dependencies
-        run: npm install
-      - if: steps.packagejson.outputs.exists == 'true'
-        name: Run test
-        run: npm test --if-present
-      - if: failure() # Only, on failure, send a message on the 94_bot-failing-ci slack channel
-        name: Report workflow run status to Slack
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,action,workflow
-          text: 'Release workflow failed in testing job'
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_CI_FAIL_NOTIFY }}
-
   release:
-    needs: [test-nodejs]
     name: Publish to any of NPM, Github, or Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -86,11 +34,9 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
-      - if: steps.packagejson.outputs.exists == 'true'
-        name: Install dependencies
+      - name: Install dependencies
         run: npm install
-      - if: steps.packagejson.outputs.exists == 'true'
-        name: Create Release Pull Request or Release
+      - name: Create Release Pull Request or Release
         uses: changesets/action@v1
         with:
           publish: npm run publish
