--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "ui": "*",
+    "@asyncapi/studio-ui": "*",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
