clean if needed

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "turbo run dev",
     "ds": "turbo run dev --no-cache --continue --filter=design-system...",
     "studio": "turbo run dev --filter=studio...",
+    "clean": "turbo run clean && rm -rf node_modules",
     "build": "turbo run build",
     "release": "turbo run release",
     "test": "turbo run test",
