--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "ds": "turbo run dev --no-cache --continue --filter=design-system...",
     "studio": "turbo run dev --filter=studio...",
     "build": "turbo run build",
-    "release": "turbo run release",
     "test": "turbo run test",
-    "bump:version": "turbo run bump:version",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish": "changeset publish",
     "build:studio": "turbo run build --no-cache --filter=studio...",
     "build:ds": "turbo run build --filter=design-system..."
   },
   "devDependencies": {
-    "turbo": "^1.10.2",
-    "semantic-release": "^21.0.3",
-    "semantic-release-monorepo": "^7.0.5",
-    "@semantic-release-plus/docker": "^3.1.2",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/github": "^8.0.6",
-    "@semantic-release/release-notes-generator": "^10.0.3"
+    "turbo": "^1.10.2"
   },
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
-  "packageManager": "npm@8.19.3"
+  "packageManager": "npm@8.19.3",
+  "dependencies": {
+    "@changesets/cli": "^2.26.2"
+  }
 }
