--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -158,7 +158,8 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-this-alias": "off"
+    "@typescript-eslint/no-this-alias": "off",
+    "security/detect-object-injection": "off"
   },
   "overrides": [
     {
